more tidy up on timedtransactions